[gd_scene format=3 uid="uid://3jldn8mj4lx4"]

[ext_resource type="Script" uid="uid://dynq7oy7c436i" path="res://Client/ui/WindowPopup.gd" id="1_2sagy"]

[node name="Window" type="Window" unique_id=1102157404]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(320, 180)
visible = false
exclusive = true
script = ExtResource("1_2sagy")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1887576099]
offset_left = 4.0
offset_top = 4.0
offset_right = 316.0
offset_bottom = 176.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MarginContainer" unique_id=1855685235]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox" unique_id=1395576156]
custom_minimum_size = Vector2(260, 40)
layout_mode = 2
size_flags_horizontal = 4
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBox" unique_id=1401788933]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="ButtonAccept" type="Button" parent="MarginContainer/VBox/Buttons" unique_id=2002763203]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "Accepter"

[node name="ButtonOK" type="Button" parent="MarginContainer/VBox/Buttons" unique_id=1628790574]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "OK"

[node name="ButtonRefuse" type="Button" parent="MarginContainer/VBox/Buttons" unique_id=1112250356]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "Refuser"

[connection signal="pressed" from="MarginContainer/VBox/Buttons/ButtonAccept" to="." method="_on_button_accept_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/Buttons/ButtonOK" to="." method="_on_button_ok_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/Buttons/ButtonRefuse" to="." method="_on_button_refuse_pressed"]
